--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;600&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -20,6 +22,9 @@ body {
   text-transform: uppercase;
   background-color: var(--bg-color);
   color: var(--text-color);
+  font-family: 'Bai Jamjuree', sans-serif;
+  /* font-family: 'syncopate', sans-serif; */
+
 }
 
 code {
