--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,11 @@
 
 :root {
   --bg-color: rgb(12, 12, 12);
+  --bg-color-light: #f5f0ec;
+
   --text-color: #fafafa;
+  --details-color: #8a0000;
+
 }
 
 body {
